new data base.. bug fixes
